package assignment4;

import java.util.Scanner;

public class Main {

     public static void main(String[] args)
     {
         System.out.println("Welcome to Four in a Line!");
         Game.play();
     }
}