package assignment4;

public interface Player {
    public int MakeAChoise(char[][] board);
}
